OO-1068 fix problem with footer cutting of content on overflow

--- a/src/main/webapp/static/themes/light/_config.scss
+++ b/src/main/webapp/static/themes/light/_config.scss
@@ -94,13 +94,16 @@ $o-main-center-bg	: inherit !default;
 $o-main-right-bg	: inherit !default;
 
 
-$o-footer-height : 60px !default;
-$o-footer-outer-bg : #f5f5f5 !default;
-$o-footer-inner-bg : #f5f5f5 !default;
-$o-footer-default-color : #999 !default;
-$o-footer-default-link-color : #999 !default;
-$o-footer-default-link-hover-color : #000 !default;
-$o-footer-position-absolute : true !default; 
+$o-footer-font-size					: $font-size-small !default;
+$o-footer-share-font-size			: $font-size-base !default;
+$o-footer-padding-top				: 10px !default;
+$o-footer-height 					: 70px !default;
+$o-footer-outer-bg 					: #f5f5f5 !default;
+$o-footer-inner-bg 					: #f5f5f5 !default;
+$o-footer-default-color 			: #999 !default;
+$o-footer-default-link-color 		: #999 !default;
+$o-footer-default-link-hover-color 	: #000 !default;
+$o-footer-position-absolute 		: true !default; 
 
 $o-images-path : "../light/images/" !default;
 
